Name:           game-pilot
Version:        0.0.0.1
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental

Executable game-pilot
  Build-Depends: 
        base,
        GLFW-b,
        vect,
        vect-opengl,
        vector,
        random,
        OpenGL,
        OpenGLRaw,

        hsndfile,
        hsndfile-vector,
        OpenAL,

        storable-complex

  Main-is: Main.hs
  Other-modules:
        AudioLoad
        AudioPlay
        FFT
        GenerateTunnel
        RenderSky
        RenderState
        RenderTunnel
        State
        Tunnel

  GHC-options:
        -Wall
        -Werror
        -fno-warn-orphans
        -threaded
        -O2
        -rtsopts
        -eventlog

  Extensions:
        ExistentialQuantification
        FlexibleContexts
        FunctionalDependencies
        KindSignatures
        MultiParamTypeClasses
        PatternGuards
        RankNTypes
        ScopedTypeVariables



