Name:           game-pilot
Version:        0.0.0.1
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental

Executable game-pilot
  Build-Depends: 
        base,
        GLFW-b              == 1.4.*,
        vect                == 0.4.*,
        vect-opengl         == 0.4.*,
        vector              == 0.10.*,
        random              == 1.0.*,
        OpenGL              == 2.9.*,
        OpenGLRaw           == 1.5.*,

        hsndfile            == 0.7.*,
        hsndfile-vector     == 0.5.*,
        OpenAL              == 1.6.*,

        storable-complex    == 0.2.*

  Main-is: Main.hs
  Other-modules:
        AudioLoad
        AudioPlay
        FFT
        GenerateTunnel
        RenderSky
        RenderState
        RenderTunnel
        State
        Tunnel

  GHC-options:
        -Wall
        -Werror
        -fno-warn-orphans
        -threaded
        -O2
        -rtsopts
        -eventlog

  Extensions:
        ExistentialQuantification
        FlexibleContexts
        FunctionalDependencies
        KindSignatures
        MultiParamTypeClasses
        PatternGuards
        RankNTypes
        ScopedTypeVariables



